app/assets/stylesheets/application.css
/* ... */
/* // 2. TYPOGRAPHY */
/* ################################################################ */
body,h1,h2,h3,h4,h5,h6,p { font-family: Helvetica, Arial, sans-serif; }

body{
margin:0;
padding:0;
line-height: 1.5em;
}

b{font-size: 110%;}
em{color: red;}

/* // 3. PAGE SECTION STYLES */
/* ################################################################ */
#wrapper {
  position: relative;
}

#maincontainer {
  position: relative;
  height: 100%;
}

#contentwrapper{
float: left;
width: 100%;
}

.innertube{
  position: relative;
  margin-top: 0;
}

.dropdown{
  display: none;
  float: right;
  margin-right: 100px;
}

.links-inline li {
  display: inline;
}

#content {
  border-style: solid;
  border-width: 1px;
}

#tweet-sample {
  margin: 5px;
  width: 340px;
  height: 150px;
  background: #e3e3e3;
}

#tweet-content {
  margin:5px;
  width: 330px;
  height:140px;
  background: #ff5763;
}

#twitter-bird {
  width:auto;
  height:60px;
}

#twitter-bird img {
  margin-top: 5px;
  margin-left: 40%;
}

.text-post {
  margin: 5px;
  width: 270px;
  height: auto;
  background: #5d5d5d;
}

.text-post-box {
  position: relative;
  padding: 5px;
  margin: 5px;
  width: 250px;
  height: auto;
  font-size: medium;
  background: #ffffff;
  word-wrap: break-word;
}

.content-type-float {
  margin-right: 5px;
  float: left;
  height: 50px;
  width: 50px;
}

.user-thumbnail {
  margin-right: 5px;
  float: left;
  height: 80px;
  width: 80px;
  background: #008aaf;
}

.user-details {
  float: right;
  height: 80px;
  width: 230px;
  background: #979797;
}

.feed-item-creator-name {
  /*text-align: center;*/
  margin-left: 10px;
  vertical-align: middle;
  line-height: 30px;
}

#textpost-sample {
  margin: 5px;
  width: 340px;
  height: 350px;
  background: #848484;
}

#textpost-content {
  margin: 5px;
  width: 330px;
  height: 340px;
  background: #ff5763;
}

#imgpost-sample {
  margin: 5px;
  width: 340px;
  height: 490px;
  background: #636363;
}

#imgpost-content {
  margin: 5px;
  width: 330px;
  height: 480px;
  background: #ff5763;
  word-wrap: break-word;
}

.img-post {
  margin: 5px;
  width: 270px;
  height: auto;
  background: #5d5d5d;
}

.img-post-box {
  position: relative;
  padding: 5px;
  margin: 5px 5px 5px 5px;
  width: 250px;
  height: auto;
  font-size: medium;
  background: #ffffff;
}

.feed-item-image {
  position: absolute;
  bottom: 5px;
  margin: 5px;
  width: 240px;
  height: auto;
}

.img-post-box img {
 /* max-width: 100%;
  max-height: 100%;*/
  width: 100%
}

#linkpost-sample {
  margin: 5px;
  width: 340px;
  height: 150px;
  background: #929292;
}

#linkpost-content {
  margin: 5px;
  width: 330px;
  height: 140px;
  background: #ff5763;
}

.link-post {
  margin: 5px;
  width: 270px;
  height: auto;
  background: #5d5d5d;
  word-wrap: break-word;
}

.text-content {
  max-width: 100%;
  max-height: 100%;
}

.link-post-box {
  position: relative;
  padding: 5px;
  margin: 5px;
  width: 250px;
  height: auto;
  font-size: medium;
  background: #ffffff
}

.link-box {
  text-align: center;
  margin-top: 12px;
  float: right;
  height: 25px;
  width: 190px; 
  background: #d5d5d5;
}

.link-details {
  height: 50px;
  width: auto;
}

#albumart-sample {
  margin: 5px;
  width: 340px;
  height: 310px;
  background: #b6b6b6;
}

#albumart-content {
  margin: 5px;
  width: 330px;
  height: 300px;
  background: #ff5763;
}

#soundcloud-sample {
  margin: 5px;
  width: 340px;
  height: 150px;
  background: #d5d5d5;
}

#soundcloud-content {
  margin: 5px;
  width: 330px;
  height: 140px;
  background: #ff5763;
}

.item-action {
  float: right;
  text-align: center;
  margin: 5px;
  width: 150px;
  height: 30px;
  background: #e3e3e3
}

.item-action a {
  vertical-align: middle;
  margin: 0px 5px 0px 5px;
}

/********************** Lastfm Top Tracks *************************/

.lastfm-top-track-container {
  margin: 5px;
  width: 270px;
  height: 270px;
  background: #5d5d5d;
}

.lastfm-top-track-inner-box {
  position: relative;
  /*padding: 5px;*/
  margin: 5px;
  width: 260px;
  height: 255px;
  font-size: medium;
  background: #ffffff;
  word-wrap: break-word;
}

.lastfm-top-track-container img {
  width: 100%;
}

.lastfm-top-track-info-box {
  bottom: -5px;
  position: absolute;
  width: 260px;
  height: 120px;
  z-index: 10;
  display: none;
}

.top-track-transparent {
  position: relative;
  width: 260px;
  height: 120px;
  background: #4d4d4d;
  opacity:0.6;
}

.top-track-details {
  top: 5px;
  left: 10px;
  position: absolute;
  width: 260px;
  height: 120px;
  z-index: 10;
}

.track-bottom-info {
  position: absolute;
  bottom: 5px;
}

.track-bottom-info p {
  color:#ffffff;
}

.lastfm-top-track-inner-box  h1{
  font-size: x-large;
  color:#ffffff;
}
.lastfm-top-track-inner-box  p{
  color:#ffffff;
}

/*------------------ Upper Info Box ------------------*/
.lastfm-top-track-upper-info-box {
  top: -5px;
  position: absolute;
  width: 260px;
  height: 60px;
  z-index: 10;
  display: none;
}

.upper-info-transparent {
  position: relative;
  width: 260px;
  height: 55px;
  
}

.icon-type {
  margin-top: 5px;
  float: left;
  width: 50px;
  height: 50px;
}

.icon-type-overlay {
  float: left;
  width: 50px;
  height: 50px;
  position: absolute;
  z-index: 10;
}

.rank-box {
  margin-top: 5px;
  display: inline;
  float: right;
  width: 50px;
  height: 50px;
}

/*------------------ Drawer ------------------*/

.drawer {
  float: right;
  bottom:0px;
  overflow: hidden;
  position: fixed;
  width: 100%;
  z-index: 1000;
}

.drawer header {
  background: #4d4d4d;
  color: #ffffff;
  display: inline;
  margin-left: 45%;
  overflow: hidden;
  padding: 0px 30px 0px 30px;
  vertical-align: middle;
  text-align: center;
  border-top-left-radius: 25px 20px;
  border-top-right-radius: 25px 20px;
  font-size: x-large;
}

.clickme {
  cursor: pointer;
  width: 200px;
}
/* ... */

